# ytyt

./: .gitignore  CHANGELOG.md  MIGRATION_NOTES.md  README.md  TODO.md  produce_1h.py  pyproject.toml  quick_assemble.py  requirements.txt  run_pipeline.py
config/: defaults.yaml  model_routing.yaml  settings.yaml
config/prompts/: trading_ambient.yaml
docs/: afterblue_reference_dna.md  audit.md  model_routing.md
profiles/: afterblue_reference_sleep.yaml  afterblue_sleep.yaml  blue_hour_rest.yaml  quiet_midnight_solitude.yaml  quiet_night_focus.yaml  rainy_city_calm.yaml  rainy_city_sleep.yaml
sagemaker/: notebook_audio.py
scripts/: analyze_reference_audio.py  generate_shorts.py
src/: orchestrator.py
src/ambient_engine/: __init__.py  __main__.py  app.py  cli.py
src/ambient_engine/arrangement/: __init__.py  assembler.py  energy.py  layering.py  spectral_balance.py  transitions.py
src/ambient_engine/core/: __init__.py  durations.py  logging.py  manifest.py  paths.py  runtime.py  seeds.py
src/ambient_engine/generation/: __init__.py  contracts.py  registry.py
src/assembly/: composer.py  metadata.py  thumbnail.py  video_prompts.py
src/audio/: extender.py  generator.py  postprocess.py  textures.py
src/publish/: uploader.py
templates/descriptions/: trading.md
tests/: test_layering.py  test_macrostructure.py  test_manifest.py  test_profiles.py  test_qc_analyzers.py  test_registry.py  test_scoring.py  test_shorts.py  test_spectral_balance.py  test_transitions.py  test_variation.py
tests/smoke/: __init__.py  test_engine_smoke.py
(+26 files in other folders)
